Bug 2037281 - Newtab widget context menu button isn't set properly for contrast fix r=home-newtab-reviewers,reemhamz
Differential Revision: https://phabricator.services.mozilla.com/D298705

UltraBlame original commit: d446d8c4e53a95c8a962e14511971935ec7a5c4c

--- a/browser/extensions/newtab/content-src/components/Widgets/_Widgets.scss
+++ b/browser/extensions/newtab/content-src/components/Widgets/_Widgets.scss
@@ -175,6 +175,8 @@
 .widgets-header-context-menu {
   position: relative;
 
+  @include wallpaper-contrast-fix;
+
   .widgets-header-context-menu-button {
     &::part(button) {
       background-color: transparent;
