--- a/browser/extensions/newtab/css/nova/activity-stream.css
+++ b/browser/extensions/newtab/css/nova/activity-stream.css
@@ -4393,6 +4393,12 @@ button.arrow-button:dir(rtl) {
 .widgets-header-context-menu {
   position: relative;
 }
+.lightWallpaper .widgets-header-context-menu {
+  color-scheme: light;
+}
+.darkWallpaper .widgets-header-context-menu {
+  color-scheme: dark;
+}
 .widgets-header-context-menu .widgets-header-context-menu-button::part(button) {
   background-color: transparent;
 }
